--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -2304,10 +2304,6 @@
   font-weight: bold;
   font-size: 1rem;
 }
-.userSellIndex_SettingContainer .container .logo {
-  position: relative;
-  left: 70%;
-}
 .userSellIndex_SettingContainer .container .filterblock {
   width: 100%;
   height: 10%;
@@ -2316,21 +2312,6 @@
   top: 7.5%;
   justify-content: center;
   align-items: center;
-}
-@media (min-width: 720px) {
-  .userSellIndex_SettingContainer .container .filterblock {
-    font-size: 0.6rem;
-  }
-}
-@media (min-width: 960px) {
-  .userSellIndex_SettingContainer .container .filterblock {
-    font-size: 0.8rem;
-  }
-}
-@media (min-width: 1200px) {
-  .userSellIndex_SettingContainer .container .filterblock {
-    font-size: 1rem;
-  }
 }
 .userSellIndex_SettingContainer .container .filterblock .filterp {
   height: 50%;
@@ -2571,84 +2552,142 @@
 .userSellOrder_SettingContainer {
   position: absolute;
   top: 15%;
+  right: 0%;
   width: 100%;
   height: 85%;
   display: flex;
 }
+@media (min-width: 480px) {
+  .userSellOrder_SettingContainer {
+    background-color: red;
+  }
+}
+@media (min-width: 720px) {
+  .userSellOrder_SettingContainer {
+    background-color: green;
+  }
+}
+@media (min-width: 960px) {
+  .userSellOrder_SettingContainer {
+    background-color: yellow;
+  }
+}
+@media (min-width: 1200px) {
+  .userSellOrder_SettingContainer {
+    background-color: #d3d3d3;
+  }
+}
 .userSellOrder_SettingContainer .container {
-  width: 70%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: absolute;
+  width: 85%;
+  height: 100%;
+  right: 0%;
+  padding: 2.5%;
 }
 .userSellOrder_SettingContainer .container .switch {
-  width: 23%;
-  height: 8%;
   display: flex;
   position: relative;
-  left: 10%;
   top: 5%;
   background-color: #858585;
   border-radius: 50px;
   justify-content: center;
   align-items: center;
+  width: 240px;
+  height: 8%;
 }
-.userSellOrder_SettingContainer .container .innerbutton {
+.userSellOrder_SettingContainer .container .switch .innerbutton {
   font-weight: bold;
-  font-size: 1rem;
   color: white;
+  border-radius: 15px;
+  background-color: transparent;
+  font-size: 1rem;
   height: 50%;
   width: 50%;
-  border-radius: 15px;
-  margin-right: 0.5%;
-  background-color: transparent;
 }
-.userSellOrder_SettingContainer .container .buttontext {
+.userSellOrder_SettingContainer .container .switch .buttonwhite {
   background-color: white;
+  border-radius: 50px;
+  padding: 3%;
+  height: 70%;
+  width: 90px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.userSellOrder_SettingContainer .container .switch .buttonwhite .buttontext {
   font-weight: bold;
   font-size: 1rem;
-  padding: 3%;
-  border-radius: 50px;
-  margin-left: 3%;
-}
-.userSellOrder_SettingContainer .container .logo {
-  position: relative;
-  left: 70%;
 }
 .userSellOrder_SettingContainer .container .filterblock {
   width: 100%;
   height: 10%;
   display: flex;
   position: relative;
-  left: 10%;
   top: 7.5%;
-  font-size: 1rem;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 .userSellOrder_SettingContainer .container .filterblock .filterp {
   height: 50%;
-  width: 5.5%;
   font-size: 1.25rem;
   font-weight: bold;
   margin-top: 0.5%;
+}
+@media (min-width: 480px) {
+  .userSellOrder_SettingContainer .container .filterblock .filterp {
+    width: 12.5%;
+  }
+}
+@media (min-width: 720px) {
+  .userSellOrder_SettingContainer .container .filterblock .filterp {
+    width: 10%;
+    margin-bottom: 1px;
+  }
+}
+@media (min-width: 960px) {
+  .userSellOrder_SettingContainer .container .filterblock .filterp {
+    width: 7.5%;
+    margin-bottom: 3px;
+  }
+}
+@media (min-width: 1200px) {
+  .userSellOrder_SettingContainer .container .filterblock .filterp {
+    width: 5%;
+    margin-bottom: 5px;
+  }
 }
 .userSellOrder_SettingContainer .container .filterblock .filterp2 {
   height: 50%;
-  width: 5.5%;
   font-size: 1.25rem;
   font-weight: bold;
   margin-top: 0.5%;
-  margin-left: 3%;
+  margin-left: 5%;
 }
-.userSellOrder_SettingContainer .container .filterblock .filterp3 {
-  height: 50%;
-  width: 9%;
-  font-size: 1.25rem;
-  font-weight: bold;
-  margin-top: 0.5%;
-  margin-left: 3%;
+@media (min-width: 480px) {
+  .userSellOrder_SettingContainer .container .filterblock .filterp2 {
+    width: 19%;
+  }
+}
+@media (min-width: 720px) {
+  .userSellOrder_SettingContainer .container .filterblock .filterp2 {
+    width: 14%;
+    margin-bottom: 1px;
+  }
+}
+@media (min-width: 960px) {
+  .userSellOrder_SettingContainer .container .filterblock .filterp2 {
+    width: 11.5%;
+    margin-bottom: 3px;
+  }
+}
+@media (min-width: 1200px) {
+  .userSellOrder_SettingContainer .container .filterblock .filterp2 {
+    width: 8.5%;
+    margin-bottom: 5px;
+  }
 }
 .userSellOrder_SettingContainer .container .filterblock .selectform {
   height: 50%;
@@ -2661,11 +2700,11 @@
 }
 .userSellOrder_SettingContainer .container .filterblock .option {
   font-weight: bold;
+  font-size: 1.25rem;
 }
 .userSellOrder_SettingContainer .container .salesfiguresblock {
   position: relative;
   top: 10%;
-  left: 10%;
   background-color: white;
   padding: 2.25rem;
   width: 80%;
@@ -2677,33 +2716,131 @@
   justify-content: center;
 }
 .userSellOrder_SettingContainer .container .salesfiguresblock .title {
-  font-size: 2rem;
+  height: 20%;
   font-weight: bold;
-  width: 20%;
-  margin-left: 10%;
+}
+@media (min-width: 480px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .title {
+    font-size: 1.75rem;
+  }
+}
+@media (min-width: 720px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .title {
+    font-size: 1.75rem;
+    margin-left: 2%;
+  }
+}
+@media (min-width: 960px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .title {
+    font-size: 2rem;
+    margin-left: 5%;
+  }
+}
+@media (min-width: 1200px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .title {
+    font-size: 2rem;
+    margin-left: 10%;
+  }
 }
 .userSellOrder_SettingContainer .container .salesfiguresblock .infoblock {
   display: flex;
-  flex-direction: row;
 }
 .userSellOrder_SettingContainer .container .salesfiguresblock .info1 {
-  font-size: 1.25rem;
-  margin-top: 2%;
-  width: 30%;
-  margin-left: 10%;
+  margin-top: 1.5%;
+}
+@media (min-width: 480px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .info1 {
+    font-size: 0.75rem;
+  }
+}
+@media (min-width: 720px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .info1 {
+    font-size: 1rem;
+    margin-left: 2%;
+  }
+}
+@media (min-width: 960px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .info1 {
+    font-size: 1.25rem;
+    margin-left: 5%;
+  }
+}
+@media (min-width: 1200px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .info1 {
+    font-size: 1.25rem;
+    margin-left: 10%;
+  }
 }
 .userSellOrder_SettingContainer .container .salesfiguresblock .info2 {
-  font-size: 1.25rem;
-  margin-top: 2%;
-  margin-left: 17.5%;
+  margin-top: 1.5%;
+}
+@media (min-width: 480px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .info2 {
+    font-size: 0.75rem;
+    margin-left: 10%;
+  }
+}
+@media (min-width: 720px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .info2 {
+    font-size: 1rem;
+    margin-left: 12.5%;
+  }
+}
+@media (min-width: 960px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .info2 {
+    font-size: 1.25rem;
+    margin-left: 12.5%;
+  }
+}
+@media (min-width: 1200px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .info2 {
+    font-size: 1.25rem;
+    margin-left: 17.5%;
+  }
 }
 .userSellOrder_SettingContainer .container .salesfiguresblock .info3 {
-  font-size: 1.25rem;
-  margin-top: 2%;
-  margin-left: 10%;
+  margin-top: 1.5%;
+}
+@media (min-width: 480px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .info3 {
+    font-size: 0.75rem;
+    margin-left: 11.5%;
+  }
+}
+@media (min-width: 720px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .info3 {
+    font-size: 1rem;
+    margin-left: 20%;
+  }
+}
+@media (min-width: 960px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .info3 {
+    font-size: 1.25rem;
+    margin-left: 20%;
+  }
+}
+@media (min-width: 1200px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .info3 {
+    font-size: 1.25rem;
+    margin-left: 22.5%;
+  }
 }
 .userSellOrder_SettingContainer .container .salesfiguresblock .button {
-  font-size: 1.25rem;
-  margin-top: 2%;
-  margin-left: 2%;
+  margin-top: 1.5%;
+  margin-left: 1%;
+}
+@media (min-width: 480px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .button {
+    font-size: 0.75rem;
+  }
+}
+@media (min-width: 720px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .button {
+    font-size: 1rem;
+  }
+}
+@media (min-width: 960px) {
+  .userSellOrder_SettingContainer .container .salesfiguresblock .button {
+    font-size: 1.25rem;
+  }
 }/*# sourceMappingURL=home.module.css.map */
