--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -45,5 +45,9 @@
 @import '../components/userSellIndex-setting';
 @import '../components/userSellIndex-table';
 @import '../components/userSellOrder-setting';
+
+@import '../components/adminJournal-section';
+@import '../components/admin-id';
+@import '../components/admin-journalBlock';
 // utilities (margin, padding, opacity, etc)
 // @import 'utilities';
