--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -2781,4 +2781,103 @@
   .userSellOrder_SettingContainer .container .salesfiguresblock .button {
     font-size: 1.1rem;
   }
+}
+
+.adminJournalSection_SettingContainer {
+  position: absolute;
+  top: 15%;
+  width: 100%;
+  height: 85%;
+  display: flex;
+}
+@media (min-width: 480px) {
+  .adminJournalSection_SettingContainer {
+    background-color: red;
+  }
+}
+@media (min-width: 720px) {
+  .adminJournalSection_SettingContainer {
+    background-color: green;
+  }
+}
+@media (min-width: 960px) {
+  .adminJournalSection_SettingContainer {
+    background-color: yellow;
+  }
+}
+@media (min-width: 1200px) {
+  .adminJournalSection_SettingContainer {
+    background-color: #d3d3d3;
+  }
+}
+
+.idContainer {
+  height: 100%;
+  width: 30%;
+  padding: 3rem;
+  padding-bottom: 6rem;
+}
+.idContainer .idBlock {
+  background-color: white;
+  height: 100%;
+  width: 100%;
+  border-radius: 30px;
+  padding: 1.5rem;
+}
+.idContainer .idBlock .idTitle {
+  height: 10%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2rem;
+  font-weight: bold;
+}
+.idContainer .idBlock .idImageContainer {
+  height: 45%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.idContainer .idBlock .idImageContainer .imageFrame {
+  height: 160px;
+  width: 160px;
+  border-radius: 999em;
+  background-color: #d3d3d3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.idContainer .idBlock .idDetailContainer {
+  height: 45%;
+  width: 100%;
+}
+.idContainer .idBlock .idDetailContainer .idDetail {
+  height: 33.3333333333%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.idContainer .idBlock .idDetailContainer .idDetail .detailP {
+  height: 50%;
+  width: 30%;
+  font-size: 1.25rem;
+}
+.idContainer .idBlock .idDetailContainer .idDetail .detailForm {
+  background-color: #d3d3d3;
+  border-radius: 10px;
+  height: 50%;
+  width: 50%;
+  font-size: 1.25rem;
+  margin-left: 2%;
+  margin-bottom: 2.5%;
+  padding-left: 0.75rem;
+}
+
+.jbContainer {
+  height: 100%;
+  width: 70%;
+  background-color: BLUE;
 }/*# sourceMappingURL=home.module.css.map */
