--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -2879,5 +2879,85 @@
 .jbContainer {
   height: 100%;
   width: 70%;
-  background-color: BLUE;
+  padding: 3rem;
+}
+.jbContainer .jbTitle {
+  height: 10%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  font-size: 2rem;
+  font-weight: bold;
+}
+.jbContainer .journalBlock {
+  height: 90%;
+  width: 100%;
+}
+.jbContainer .journalBlock .jbDetailContainer {
+  height: 30%;
+  width: 100%;
+  background-color: white;
+  border-radius: 30px;
+  padding: 1.5rem;
+  display: flex;
+  margin-bottom: 3.3333333333%;
+}
+.jbContainer .journalBlock .jbDetailContainer .containerLeft {
+  height: 100%;
+  width: 30%;
+  border-right: solid;
+  display: flex;
+  align-items: center;
+}
+.jbContainer .journalBlock .jbDetailContainer .containerLeft .jbImageContainer {
+  height: 100%;
+  width: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.jbContainer .journalBlock .jbDetailContainer .containerLeft .jbImageContainer .imageFrame {
+  height: 85px;
+  width: 85px;
+  border-radius: 999em;
+  background-color: #d3d3d3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.jbContainer .journalBlock .jbDetailContainer .containerLeft .textFrame {
+  height: 100%;
+  width: 60%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.jbContainer .journalBlock .jbDetailContainer .containerLeft .textFrame .user {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+.jbContainer .journalBlock .jbDetailContainer .containerLeft .textFrame .duration {
+  font-size: 1.25rem;
+}
+.jbContainer .journalBlock .jbDetailContainer .containerMiddle {
+  height: 100%;
+  width: 40%;
+  font-size: 1.25rem;
+  border-right: solid;
+  padding: 0.75rem;
+  display: flex;
+  align-items: center;
+}
+.jbContainer .journalBlock .jbDetailContainer .containerRight {
+  height: 100%;
+  width: 30%;
+  font-weight: bold;
+  font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.jbContainer .journalBlock .blockSpace {
+  height: 2.5%;
+  width: 100%;
 }/*# sourceMappingURL=home.module.css.map */
