--- a/styles/components/_userHotel-multi.scss
+++ b/styles/components/_userHotel-multi.scss
@@ -81,8 +81,18 @@
         width: 100%;
         display: flex;
         h1{
-            font-size: $font-size-xxl;
+            @include sm {
+                font-size: $font-size-xl;
+            }
+            @include md {
+                font-size: $base-font-size * 2.5;
+            }
+            @include lg {
+                font-size: $font-size-xxl;
+            }
             margin: 0;
+            margin-top: auto;
+            margin-bottom: auto;
         } 
         .hotelbutton {
             margin-left: auto;
