--- a/styles/components/_userPersonalInfo-section.scss
+++ b/styles/components/_userPersonalInfo-section.scss
@@ -7,17 +7,22 @@
     display: flex;
 
     .userinfoblock {
+        position: absolute;
+        
         margin: auto;
         background-color: white;
         @include sm {
             padding: $base-padding * 2;
-            width: 100%;
+            left: 15%;
+            width: 85%;
             height: 100%;
         }
         @include lg {
             padding: $base-padding * 4;
+            top: 6%;
+            right: 2%;
             width: 70%;
-            height: 84%;
+            height: 88%;
             border-radius: $base-border-radius;
             border: 1px solid $secondary-color;
         }
