--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -1437,11 +1437,7 @@
   font-size: 1.2rem;
   padding: 0.75rem;
   padding-top: 1.5rem;
-}
-@media (min-width: 480px) {
-  .userMultiMenuContainer {
-    width: 15%;
-  }
+  width: 15%;
 }
 .userMultiMenuContainer .title {
   align-items: center;
@@ -1451,7 +1447,7 @@
     display: none;
   }
 }
-@media (min-width: 720px) {
+@media (min-width: 960px) {
   .userMultiMenuContainer .title {
     display: inline-flex;
   }
@@ -1467,7 +1463,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  height: 90%;
+  height: 85%;
   margin: auto;
   margin-bottom: 10%;
   margin-top: 8%;
@@ -1482,7 +1478,6 @@
 .userMultiMenuContainer .smoptions .button {
   width: 50px;
   height: 50px;
-  margin: 1rem;
 }
 .userMultiMenuContainer .smoptions .button:hover {
   color: black;
@@ -1490,7 +1485,7 @@
 .userMultiMenuContainer .smoptions hr {
   border: 0.5px white solid;
   width: 60%;
-  margin: 1rem;
+  margin: 0.5rem;
 }
 .userMultiMenuContainer .options {
   display: flex;
@@ -1523,21 +1518,25 @@
   display: flex;
 }
 .userPersonalInfoButtonContainer .userinfoblock {
+  position: absolute;
   margin: auto;
   background-color: white;
 }
 @media (min-width: 480px) {
   .userPersonalInfoButtonContainer .userinfoblock {
     padding: 1.5rem;
-    width: 100%;
+    left: 15%;
+    width: 85%;
     height: 100%;
   }
 }
 @media (min-width: 960px) {
   .userPersonalInfoButtonContainer .userinfoblock {
     padding: 3rem;
+    top: 6%;
+    right: 2%;
     width: 70%;
-    height: 84%;
+    height: 88%;
     border-radius: 20px;
     border: 1px solid aliceblue;
   }
@@ -1764,8 +1763,24 @@
   display: flex;
 }
 .userHotelInfoContainer .main .content h1 {
-  font-size: 3rem;
   margin: 0;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+@media (min-width: 480px) {
+  .userHotelInfoContainer .main .content h1 {
+    font-size: 2rem;
+  }
+}
+@media (min-width: 720px) {
+  .userHotelInfoContainer .main .content h1 {
+    font-size: 2.5rem;
+  }
+}
+@media (min-width: 960px) {
+  .userHotelInfoContainer .main .content h1 {
+    font-size: 3rem;
+  }
 }
 .userHotelInfoContainer .main .content .hotelbutton {
   margin-left: auto;
@@ -1868,8 +1883,24 @@
   display: flex;
 }
 .userHotelFeatureContainer .main .content h1 {
-  font-size: 3rem;
   margin: 0;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+@media (min-width: 480px) {
+  .userHotelFeatureContainer .main .content h1 {
+    font-size: 2rem;
+  }
+}
+@media (min-width: 720px) {
+  .userHotelFeatureContainer .main .content h1 {
+    font-size: 2.5rem;
+  }
+}
+@media (min-width: 960px) {
+  .userHotelFeatureContainer .main .content h1 {
+    font-size: 3rem;
+  }
 }
 .userHotelFeatureContainer .main .content .hotelbutton {
   margin-left: auto;
@@ -1976,8 +2007,24 @@
   display: flex;
 }
 .userHotelRoomContainer .main .content h1 {
-  font-size: 3rem;
   margin: 0;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+@media (min-width: 480px) {
+  .userHotelRoomContainer .main .content h1 {
+    font-size: 2rem;
+  }
+}
+@media (min-width: 720px) {
+  .userHotelRoomContainer .main .content h1 {
+    font-size: 2.5rem;
+  }
+}
+@media (min-width: 960px) {
+  .userHotelRoomContainer .main .content h1 {
+    font-size: 3rem;
+  }
 }
 .userHotelRoomContainer .main .content .hotelbutton {
   margin-left: auto;
@@ -2000,24 +2047,32 @@
   transition: linear 0.2s;
 }
 .userHotelRoomContainer .main .roomform {
-  padding: 3%;
+  width: 100%;
   background-color: white;
-  display: grid;
-  grid-template-columns: 1fr 5fr;
-  align-items: center;
   border-radius: 20px;
+  display: flex;
+  flex-direction: column;
+  padding: 5%;
+  padding-bottom: 2%;
   margin-bottom: 3%;
 }
-.userHotelRoomContainer .main .roomform * {
-  margin-bottom: 1.5rem;
-}
 .userHotelRoomContainer .main .roomform p {
-  grid-column: 1/2;
+  margin-right: 8%;
 }
 .userHotelRoomContainer .main .roomform .input {
-  grid-column: 2/3;
   display: flex;
   align-items: center;
+  min-width: 200px;
+}
+@media (min-width: 480px) {
+  .userHotelRoomContainer .main .roomform .input {
+    flex-direction: column;
+  }
+}
+@media (min-width: 960px) {
+  .userHotelRoomContainer .main .roomform .input {
+    flex-direction: row;
+  }
 }
 .userHotelRoomContainer .main .roomform .input p {
   margin-right: 3rem;
@@ -2035,7 +2090,6 @@
   margin-right: 0.75rem;
 }
 .userHotelRoomContainer .main .roomform .labelcontainer {
-  grid-column: 1/-1;
   display: flex;
   margin: 0;
   margin-bottom: 1rem;
@@ -2083,7 +2137,6 @@
   box-shadow: 1px 1px 1px #999;
   margin-bottom: 3%;
   overflow: hidden;
-  grid-column: 1/-1;
 }
 .userHotelRoomContainer .main .btn_content {
   margin-top: auto;
@@ -2136,8 +2189,24 @@
   display: flex;
 }
 .userHotelNoticeContainer .main .content h1 {
-  font-size: 3rem;
   margin: 0;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+@media (min-width: 480px) {
+  .userHotelNoticeContainer .main .content h1 {
+    font-size: 2rem;
+  }
+}
+@media (min-width: 720px) {
+  .userHotelNoticeContainer .main .content h1 {
+    font-size: 2.5rem;
+  }
+}
+@media (min-width: 960px) {
+  .userHotelNoticeContainer .main .content h1 {
+    font-size: 3rem;
+  }
 }
 .userHotelNoticeContainer .main .content .hotelbutton {
   margin-left: auto;
@@ -2220,13 +2289,13 @@
   transition: linear 0.1s;
 }
 .userHotelNoticeContainer .main .check_content {
-  margin-bottom: 2%;
+  margin-bottom: 2rem;
   width: 100%;
   display: flex;
   align-items: center;
 }
 .userHotelNoticeContainer .main .check_content .contentname {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: bold;
 }
 .userHotelNoticeContainer .main .check_content .btn {
@@ -2234,6 +2303,7 @@
   width: 20px;
   margin-left: 2%;
   margin-right: 2%;
+  min-width: 0;
   border-radius: 5px;
   cursor: pointer;
   background-color: white;
