left-hand block

--- a/styles/components/_hotelinfo-title.scss
+++ b/styles/components/_hotelinfo-title.scss
@@ -20,7 +20,7 @@
     align-items: start;
 
     * {
-      margin: $base-margin/4;
+      margin: 0.25rem;
     }
     .content{
       display: flex;
