--- a/styles/components/_hotelinfo-section.scss
+++ b/styles/components/_hotelinfo-section.scss
@@ -13,28 +13,28 @@
     {
         margin-top: 2%;
     }
-    .titleLeftContainer{
-        position: fixed;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        background-color: $decorate-color;
-        color: white;
-        height: 100%;
-        font-family: $heading-font;
-        font-size: $font-size-md;
-        padding: $base-padding;
-        padding-top: $base-padding * 2;
-        width: 20%;
-        @include leftsearchbar;
-            .logo{
-                margin: auto;
-                margin-top: $base-margin * 1;
-                margin-bottom: $base-margin * 1;
-                height: 100px;
-                width: 100px;
-            }
-    }
+    // .titleLeftContainer{
+    //     position: fixed;
+    //     display: flex;
+    //     flex-direction: column;
+    //     align-items: center;
+    //     background-color: $decorate-color;
+    //     color: white;
+    //     height: 100%;
+    //     font-family: $heading-font;
+    //     font-size: $font-size-md;
+    //     padding: $base-padding;
+    //     padding-top: $base-padding * 2;
+    //     width: 20%;
+    //     // @include leftsearchbar;
+    //         .logo{
+    //             margin: auto;
+    //             margin-top: $base-margin * 1;
+    //             margin-bottom: $base-margin * 1;
+    //             height: 100px;
+    //             width: 100px;
+    //         }
+    // }
     .main{
         position: absolute;
         width:80%;
@@ -42,6 +42,8 @@
         right: 0%;
         padding-left: 2%;
         padding-right: 2%;
+
+        @include set-rightblock-responsive;
 
     }
 }
