--- a/styles/components/_search-section.scss
+++ b/styles/components/_search-section.scss
@@ -1,19 +1,6 @@
 .searchBottomContainer{
-    display: flex;
-    height: 100%;
-    justify-content: space-between;
+    @include bottom-block;
     
-    .bottomleftcontainer{
-        height:100%;
-        position: fixed;
-        background-color: gray;
-        top: 15%;
-        display: flex;
-        flex-direction:column;
-        align-items: center;
-        
-        @include leftsearchbar;
-    }
     .hoteldata {
         position: absolute;
         // height:100%;
@@ -23,6 +10,7 @@
         right: 0%;
         display: flex;
         flex-direction: column;
+        @include set-rightblock-responsive;
         
     }
     
