--- a/styles/components/_userMulti-menu.scss
+++ b/styles/components/_userMulti-menu.scss
@@ -1,16 +1,5 @@
 .userMultiMenuContainer {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: $decorate-color;
-    color: white;
-    height: 100%;
-    font-family: $heading-font;
-    font-size: $font-size-md;
-    padding: $base-padding;
-    padding-top: $base-padding * 2;
-    width: 15%;
+    @include left-block(15%, 15%);
 
     .title {
         @include sm {
@@ -55,7 +44,7 @@
         hr {
             border: 0.5px white solid;
             width: 60%;
-            margin: $base-margin / 2;
+            margin: 0.5rem;
         }
     }
     .options {
