--- a/styles/components/_userSellIndex-setting.scss
+++ b/styles/components/_userSellIndex-setting.scss
@@ -1,10 +1,5 @@
 .userSellIndex_SettingContainer{
-    position: absolute;
-    top: 15%;
-    right: 0%;
-    width: 100%;
-    height: 85%;
-    display: flex;
+    @include bottom-block;
 
     // //test
     // @include sm {
