--- a/styles/components/_search-section.scss
+++ b/styles/components/_search-section.scss
@@ -2,15 +2,8 @@
     @include bottom-block;
     
     .hoteldata {
-        position: absolute;
-        // height:100%;
-        width:80%;
-        top: 20%;
-        z-index: -1;
-        right: 0%;
-        display: flex;
-        flex-direction: column;
-        @include set-rightblock-responsive;
+        @include right-block;
+        @include set-rightblock-responsive(70%, 77%, 82%);
         
     }
     
