--- a/styles/components/_userIndex-option.scss
+++ b/styles/components/_userIndex-option.scss
@@ -1,12 +1,10 @@
 .userIndexOptionContainer{
-    width: 85%;
-    height: 75%;
+    @include right-block;
+    @include set-rightblock-responsive(60%, 70%, 80%);
+    // width: %;
+    height: 100%;
     margin: auto;
-    margin-top: $base-margin * 1.5;
-    margin-bottom: $base-margin * 2;
     background-color: white;
-    border: 1px solid black;
-    border-radius: $base-border-radius;
     padding: $base-padding * 2;
 
     display: flex;
