--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -425,19 +425,34 @@
 }
 
 .userIndexOptionContainer {
-  width: 85%;
-  height: 75%;
+  position: absolute;
+  width: 80%;
+  right: 0%;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
   margin: auto;
-  margin-top: 1.5rem;
-  margin-bottom: 2rem;
   background-color: white;
-  border: 1px solid black;
-  border-radius: 20px;
   padding: 1.5rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+}
+@media (min-width: 480px) {
+  .userIndexOptionContainer {
+    width: 60%;
+  }
+}
+@media (min-width: 720px) {
+  .userIndexOptionContainer {
+    width: 70%;
+  }
+}
+@media (min-width: 1200px) {
+  .userIndexOptionContainer {
+    width: 80%;
+  }
 }
 .userIndexOptionContainer .button {
   background-color: #D9D9D9;
@@ -498,11 +513,22 @@
   padding: 0.75rem;
   padding-top: 1.5rem;
   width: 20%;
-  min-width: 20%;
   padding: 3.5%;
-  padding-top: 5rem;
-  padding-bottom: 2%;
-  justify-content: space-between;
+}
+@media (min-width: 480px) {
+  .userIndexSettingContainer {
+    width: 40%;
+  }
+}
+@media (min-width: 720px) {
+  .userIndexSettingContainer {
+    width: 30%;
+  }
+}
+@media (min-width: 1200px) {
+  .userIndexSettingContainer {
+    width: 20%;
+  }
 }
 .userIndexSettingContainer h1 {
   font-size: 2rem;
@@ -512,25 +538,20 @@
 }
 .userIndexSettingContainer .circle {
   position: relative;
-  border-radius: 10rem;
   background-color: #fff;
-}
-@media (min-width: 0) {
-  .userIndexSettingContainer .circle {
-    height: 4rem;
-    width: 4rem;
-  }
 }
 @media (min-width: 480px) {
   .userIndexSettingContainer .circle {
-    height: 6rem;
-    width: 6rem;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 4rem;
   }
 }
 @media (min-width: 960px) {
   .userIndexSettingContainer .circle {
-    height: 8rem;
-    width: 8rem;
+    height: 6rem;
+    width: 6rem;
+    border-radius: 6rem;
   }
 }
 .userIndexSettingContainer .textcontainer {
@@ -539,20 +560,19 @@
   color: white;
   cursor: pointer;
   width: 100%;
-  margin-top: 8%;
-  padding-bottom: 25%;
+  margin-top: 20%;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-around;
 }
 .userIndexSettingContainer .textcontainer p, .userIndexSettingContainer .textcontainer button, .userIndexSettingContainer .textcontainer h2 {
-  margin-top: 1.2rem;
-  margin-bottom: 1.2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 .userIndexSettingContainer .btn {
   height: 2.5rem;
-  width: 200px;
+  width: 100%;
   align-self: flex-start;
   font-size: 1.2rem;
   border: transparent;
@@ -570,41 +590,17 @@
   color: black;
   cursor: pointer;
 }
-.userIndexSettingContainer .contact {
-  align-self: flex-end;
-}
 
 .userIndexSectionContainer {
-  height: 100%;
+  position: absolute;
+  top: 15%;
+  right: 0%;
   width: 100%;
+  height: 85%;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: space-around;
-}
-.userIndexSectionContainer .columnContainer {
-  width: 75%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-top: 2.25rem;
-}
-@media (min-width: 0) {
-  .userIndexSectionContainer .columnContainer {
-    align-items: center;
-  }
-}
-@media (min-width: 960px) {
-  .userIndexSectionContainer .columnContainer {
-    align-items: flex-end;
-  }
-  .userIndexSectionContainer .columnContainer a {
-    margin-right: 8%;
-  }
-}
-.userIndexSectionContainer .columnContainer img {
-  height: 100px;
-  width: 100px;
+  justify-content: space-between;
 }
 
 .hotelInfoRoomContainer {
@@ -997,9 +993,10 @@
 .hotelinfoSectionContainer {
   position: absolute;
   top: 15%;
-  right: 0;
+  right: 0%;
   width: 100%;
   height: 85%;
+  display: flex;
 }
 .hotelinfoSectionContainer .hotelInfoEvaluate, .hotelinfoSectionContainer .hotelInfoInformation,
 .hotelinfoSectionContainer .hotelInfoAttraction, .hotelinfoSectionContainer .hotelInfoTransportation {
@@ -1019,7 +1016,7 @@
 }
 @media (min-width: 480px) {
   .hotelinfoSectionContainer .main {
-    width: 75%;
+    width: 70%;
   }
 }
 @media (min-width: 720px) {
@@ -1281,11 +1278,10 @@
   padding: 0.75rem;
   padding-top: 1.5rem;
   width: 15%;
-  min-width: 15%;
 }
 @media (min-width: 480px) {
   .searchSearchformContainer {
-    width: 25%;
+    width: 30%;
   }
 }
 @media (min-width: 720px) {
@@ -1344,15 +1340,13 @@
 .searchBottomContainer .hoteldata {
   position: absolute;
   width: 80%;
-  top: 20%;
-  z-index: -1;
   right: 0%;
   display: flex;
   flex-direction: column;
 }
 @media (min-width: 480px) {
   .searchBottomContainer .hoteldata {
-    width: 75%;
+    width: 70%;
   }
 }
 @media (min-width: 720px) {
@@ -1396,7 +1390,6 @@
   padding: 0.75rem;
   padding-top: 1.5rem;
   width: 15%;
-  min-width: 15%;
 }
 .userMultiMenuContainer .title {
   align-items: center;
@@ -1553,6 +1546,7 @@
   font-size: 1.2rem;
   padding-right: 0.75rem;
   padding-left: 0.75rem;
+  min-width: 120px;
 }
 .userPersonalInfoButtonContainer .usersetting .userbutton:hover, .userPersonalInfoButtonContainer .usersetting .submit:hover {
   background-color: #AAA;
