--- a/styles/layout/home.module.css
+++ b/styles/layout/home.module.css
@@ -3062,4 +3062,22 @@
 .jbContainer .journalBlock .blockSpace {
   height: 2.5%;
   width: 100%;
+}
+.jbContainer .nojournalBlock {
+  height: 90%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.jbContainer .nojournalBlock .noInfo {
+  margin-top: 100px;
+  height: 10%;
+  font-size: 3rem;
+  font-weight: bold;
+}
+.jbContainer .nojournalBlock .back {
+  margin-top: 25%;
+  height: 10%;
+  font-size: 2rem;
 }/*# sourceMappingURL=home.module.css.map */
