--- a/styles/components/_userHotel-notice.scss
+++ b/styles/components/_userHotel-notice.scss
@@ -1,5 +1,5 @@
 .userHotelNoticeContainer {
-    @include pageContainer;
+    @include bottom-block;
     .main{
         @include template;
         .short_input{
