--- a/styles/components/_userMulti-menu.scss
+++ b/styles/components/_userMulti-menu.scss
@@ -68,6 +68,9 @@
             width: 80%;
             margin: $base-margin;
         }
+        p{
+            width: 80px;
+        }
     }
     
 }
