--- a/styles/components/_hotelInfo-book.scss
+++ b/styles/components/_hotelInfo-book.scss
@@ -7,10 +7,9 @@
     }
 
     @include sm{
-        padding: $base-margin * 0.5;
+        padding: 0.5rem;
         .right_container{
-            background:white;
-            border-radius: $base-border-radius;
+            @include white-board-style;
             height: 60px;
             width: 100%;
         }
@@ -21,17 +20,14 @@
     @include lg{
         .right_container{
             // position: relative;
-            background:white;
-            border-radius: $base-border-radius;
+            @include white-board-style;
             height: 100%;
             width: 100%;
         }
     }
 
     .button{
-        height: 30px;
-        width: 60px;
-        border-radius: 0.3rem;
-        background-color: #CCCCCC;
+        @include button;
+        margin: auto;
     }
 }
