--- a/styles/components/_hotelInfo-room.scss
+++ b/styles/components/_hotelInfo-room.scss
@@ -9,17 +9,22 @@
     }
     .searchcontainer, .button_container{
         @include sm {
-            margin: $base-margin * 0.5;
+            margin: 1%;
+            .discount {
+                visibility: hidden;
+            }
         }
         @include md {
             margin: $base-margin;
+            .discount {
+                visibility: visible;
+            }
         }
     }
     .searchcontainer{
-        background:white;
-        height: 200px;
+        @include white-board-style;
+        // height: 200px;
         width: 88%;
-        border-radius: $base-border-radius;
         
         display: flex;
         flex-direction: column;
@@ -30,6 +35,7 @@
             display: flex;
             flex-direction: row;
             align-items: center;
+            flex-wrap: wrap;
             * {
                 margin-right: $base-margin;
             }
@@ -44,7 +50,7 @@
             }
 
             .name{
-                font-size: $font-size-lg
+                font-size: $font-size-lg;
             }
             
             .people{
@@ -57,28 +63,29 @@
             }
             
             .button{
-                width: 10%;
-                height: 30px;
-                border-radius: 0.3rem;
-                background-color: #CCCCCC;
+                @include label;
+                margin-bottom: 0;
+                margin-left: 0;
             }
+            
         }
     }
     .button_container{
-        background:white;
-        border-radius: $base-border-radius;
-        height: 200px;
+        @include white-board-style;
+        // height: 200px;
         width: 12%;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        font-size: 1.5rem;
+        font-size: $font-size-lg;
         font-weight: bold;
 
         .btn{
+            @include button;
             height: 50px;
-            width: 50px;  
+            min-width: 25px;  
+            margin: 0;
             border-radius: 0.5rem;
         }
         .content{
