--- a/styles/components/_hotelinfo-intro.scss
+++ b/styles/components/_hotelinfo-intro.scss
@@ -1,30 +1,21 @@
 .hotelInfoIntroduction{
     padding: 1.5%;
     .title{
-        font-size: 2rem;
+        font-size: $font-size-xl;
         font-weight: bold;
     }
     .content{
-        margin-top: 10px;
+        margin: $base-margin;
     }
     .s_title{
-        font-size: 1.5rem;
-        margin-top: 1%;
-        margin-bottom: 1%;
+        font-size: $font-size-md;
+        margin: 0.5rem;
         font-weight: bold;
     }
     .block{
         display: flex;
-        margin-top: 1%;
-        margin-bottom: 1%;
         p{
-            margin-right:2%;
-            background-color: white;
-            padding-left: 15px;
-            padding-right: 15px;
-            padding-top: 2px;
-            padding-bottom: 2px;
-            border-radius: 10px;
+            @include label;
         }
     }
     
