--- a/styles/components/_hotelinfo-title.scss
+++ b/styles/components/_hotelinfo-title.scss
@@ -10,7 +10,10 @@
   padding: 1.5%;
 
   .title{
-    font-size: 3rem;
+    font-size: $font-size-xxl;
+  }
+  p {
+    font-size: $base-font-size;
   }
   .titleTopContainer{
     width: 30%;
