--- a/styles/components/_search-searchform.scss
+++ b/styles/components/_search-searchform.scss
@@ -3,23 +3,18 @@
     @include set-leftblock-responsive(30%, 23%, 18%);
 
     * {
-        height: 2.4rem;
-        padding: 10px;
-        display: flex;
+        @include input-box;
         margin-top: $base-margin * 0.75;
         margin-bottom: $base-margin * 0.75;
-        align-items: center;
-        justify-content: center;
-        background-color: #fff;
-        border-radius: 5px;
-        font-weight:bolder;
-        font-size: $base-font-size; 
     }
     .btn {
         cursor: pointer;
 
         &:active {
-            background-color: #d9d9d9;
+            background-color: $background-color;
+            * {
+                background-color:$background-color;
+            }
             box-shadow: 0 2px #666;
             transform: translateY(2px);
         }
@@ -28,15 +23,9 @@
         width: 80%;
     }
     .btnfilter{
-        border-radius: 5px;
         cursor: pointer;
-        
-        height: 2.4rem;
-        padding: 10px;
-        margin: $base-margin * 0.75;
         margin-top: 20%;
-        font-weight: bolder;
-        font-size: $base-font-size; 
+        background-color: $background-color;
         
     }
     
