--- a/styles/components/_userHotel-multi.scss
+++ b/styles/components/_userHotel-multi.scss
@@ -1,17 +1,3 @@
-@mixin button {
-    padding: 6px;
-    border-radius: $base-border-radius;
-    margin: $base-margin;
-    // margin-bottom: 0;
-    max-height: 40px;
-    min-width: 80px;
-    &:hover {
-        background-color: black;
-        color: white;
-        transition: linear 0.2s;
-    }
-}
-
 @mixin styled_botton {
     .add {
         @include button;
@@ -50,22 +36,10 @@
     overflow: hidden;
 }
 
-@mixin pageContainer {
-    position: absolute;
-    top: 15%;
-    width: 100%;
-    height: 85%;
-    display: flex;
-}
 
 @mixin template {
-    position: absolute;
-    width:85%;
-    // height: 100%;
-    right: 0%;
-    padding: 2.5%;
-    display: flex;
-    flex-direction: column;
+    @include right-block;
+    padding: 2%;
     justify-content: flex-start;
 
     p, .contentname {
