--- a/styles/layout/_variables.scss
+++ b/styles/layout/_variables.scss
@@ -1,9 +1,11 @@
 // theme colors
 $background-color: #D9D9D9;
 $secondary-color: aliceblue;
-$decorate-color: #858585;
-$header-background: dimgrey;
-
+$decorate-color: #96897B; //#858585;
+$header-background: #FA9500;
+$light-theme-color: #ffc266;
+$light-grey: #EEEEEE;
+//https://coolors.co/palettes/popular/orange
 
 // spacing
 $base-padding: 0.75rem;
@@ -23,7 +25,7 @@ $base-font-size: 1rem;
 $font-size-sm: $base-font-size * 0.75;
 $font-size-md: $base-font-size * 1.2;
 $font-size-lg: $base-font-size * 1.5;
-$font-size-xl: $base-font-size * 2;
+$font-size-xl: $base-font-size * 1.8;
 $font-size-xxl: $base-font-size * 3;
 
 $font-size-sm-title: $base-font-size * 5;
