--- a/styles/layout/home.module.scss
+++ b/styles/layout/home.module.scss
@@ -5,7 +5,8 @@
 // base & layout
 @import 'breakpoints';
 // @import 'grid';
-@import 'style';
+@import 'layout';
+@import 'component-style';
 
 // components (button, card, navbar etc)
 @import '../components/multi-header';
